fix line trough visibility on completeTask

--- a/src/Wac/TechWebBundle/Resources/public/css/main.css
+++ b/src/Wac/TechWebBundle/Resources/public/css/main.css
@@ -1,3 +1,21 @@
+table {
+    border-collapse: collapse;
+}
+
+td {
+    position: relative;
+    padding: 5px 10px;
+}
+
+tr.strikeout td:before {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    border-bottom: 1px solid rgba(17, 17, 17, 0.81);
+    width: 100%;
+}
+
 .completedTask{
   text-decoration: line-through;
 }
